--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>John Doe - Business Administration</title>
+  <title>Rangsiman Chantasorn - Cinematic Arts</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Rangsiman Chantasorn</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="RangsimanChantasorn.jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,14 +58,14 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Rangsiman Chantasorn
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Cinematic Arts</div>
+        <p class="lead mb-4">I'm an aspiring and driven student at USC interested in learning and growing in my field of study. I have adequate experience in administrative work, planning, and marketing. I like to do photography and videography in my free time, I enjoy gaining knowledge, whether it's social or anything about my existence in this world.<br><br>
 
-        Enter bio here<br><br>
+        <br><br>
 
-        Enter bio here
+        
         </p>
         <div class="social-icons">
           <a target="_blank" href="https://linkedin.com">
@@ -77,7 +77,7 @@
           <a target="_blank" href="https://twitter.com">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" href="mailto:youremail@gmail.com">
+          <a target="_blank" href="mailto:rchan126@ucr.edu">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -93,42 +93,41 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://mulesoft.com">Company</a></div>
+            <div class="subheading mb-3"><a target="_blank" href="https://lohsmindfulness.wixsite.com/home">Mindfulness Club</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Designed website for school club<br> 
+              • Increased club membership/participation by 20% within a year<br>
+              • Experience with HTML, CSS, Javascript, Photoshop, Sony Vegas pro, and most Adobe products<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">September 2017 - May 2019</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://pubnub.com">Whole Foods</a></div>
+            <h3 class="mb-0">Photographer & Videographer</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.royalelastics.com/">Royal Elastics</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Coordinated 2 photoshoots with 5 different models<br>
+              • Directed a commercial shoot alongside company models<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">August 2017 - May 2019</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Social Media Manager</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">Bioengineering Club</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Orchestrated the promotion of the club towards the student body with 100+ students signed up within 2 hours<br>
+            • Designed proof logos for official club use as well as social media use<br>
+            • Created and managed all social media accounts to spread adverts on official club events and activities<br>
 
           </p>
           </div>
@@ -151,36 +150,13 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <h3 class="mb-0">Los Osos High School</h3>
+            <div class="subheading mb-3">High School Degree</div>
+            <div>Degree in being a student</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">August 2015 - May 2019</span>
           </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
-          </div>
-        </div>
 
       </div>
     </section>
@@ -188,18 +164,22 @@
     <hr class="m-0">
 
     <section class="resume-section p-1 p-lg-5 d-flex align-items-center" id="portfolio">
-      <div class="w-100">
-        <h2 class="mb-5">Portfolio</h1>
-        <center>
-            <img src="img/image2.jpeg" width="500px">
-        </center>
-      </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Personal Portfolio</h3>
+            <div class="subheading mb-3">All of my work</div>
+            <div> www.helpsunsongetagirlfriend.com </div>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">2013-2019</span>
+          </div>
     </section>
 
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Rangsiman Chantasorn</center><br>
 
 
   </div>
